code25_all/swift/24385734.txt
swift -sdk ...
swift -h
$ swift
Welcome to Swift!  Type :help for assistance.
  1> import UIKit
<REPL>:1:8: error: no such module 'UIKit'
import UIKit
       ^

